Added CSS file and resources

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     </head>
     <body>
         <div class="top-container">
-            <img class="top-cloud" height="100px" width="200px" src="../Resources/cloud1.png" alt="cloud-image">
+            <img class="top-cloud" height="100px" width="200px" src="./Resources/cloud1.png" alt="cloud-image">
             <h1>I'm Omkar</h1>
             <h2 class="subheading">a programmer</h2>
-            <img class="bottom-cloud" height="100px" width="200" src="../Resources/cloud1.png" alt="cloud-image">
-            <img height="300px" width="450px" src="../Resources/mountain.png" alt="mountain-image">
+            <img class="bottom-cloud" height="100px" width="200" src="./Resources/cloud1.png" alt="cloud-image">
+            <img height="300px" width="450px" src="./Resources/mountain.png" alt="mountain-image">
         </div>
 
 
@@ -18,7 +18,7 @@
         <div class="middle-container">
             
             <div class="profile">
-              <img class="profile-img" height="300px" width="300px" src="../Resources/profile.jpg" alt="profile-pic">
+              <img class="profile-img" height="300px" width="300px" src="./Resources/profile.jpg" alt="profile-pic">
               <h2>Hello.</h2>
               <p class="intro">I am an aspiring web developer and an IT student.</p>
             </div>
@@ -28,17 +28,17 @@
             <div class="skills">
               <h2>My Skills.</h2>
               <div class="skill-row">
-                <img class="frontend" height="150px" width="150px" src="../Resources/programming.png" alt="frontend-img">
+                <img class="frontend" height="150px" width="150px" src="./Resources/programming.png" alt="frontend-img">
                 <h3>Frontend Development</h3>
                 <p>I am currently learning frontend develpment using technologies like HTML, CSS and Javascript.</p>
               </div>
               <div class="skill-row">
-                <img class="java" height="150px" width="150px" src="../Resources/java.png" alt="java-img">
+                <img class="java" height="150px" width="150px" src="./Resources/java.png" alt="java-img">
                 <h3>Core Java</h3>
                 <p>I am familiar with the core java language and object oriented concepts.</p>
               </div>
               <div class="skill-row">
-                <img class="mysql" height="150px" width="150px" src="../Resources/mysql.png" alt="mysql-img">
+                <img class="mysql" height="150px" width="150px" src="./Resources/mysql.png" alt="mysql-img">
                 <h3>MySQL</h3>
                 <p>I am well versed with Structured Query Language and Database management using MySQL</p>
               </div>
@@ -58,7 +58,7 @@
           <div class="bottom-container">
             <a href="www.linkedin.com/in/omkar-doke1619" target="_blank">LinkedIn</a>
             <a href="https://twitter.com/" target="_blank">Twitter</a>
-            <a href="https://www.appbrewery.co/" target="_blank">Website</a>
+            <a href="https://github.com/Omkar1619" target="_blank">Github</a>
             <p class="copyright">© 2022 Omkar Doke.</p>
           </div>       
     </body>
