modified contact links

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           
           
           <div class="bottom-container">
-            <a href="www.linkedin.com/in/omkar-doke1619" target="_blank">LinkedIn</a>
-            <a href="https://twitter.com/" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/in/omkar-doke1619/" target="_blank">LinkedIn</a>
             <a href="https://github.com/Omkar1619" target="_blank">Github</a>
             <p class="copyright">© 2022 Omkar Doke.</p>
           </div>       
